--- a/Telegrafo.css
+++ b/Telegrafo.css
@@ -1,5 +1,5 @@
-tab1 { padding-left: 3.4em; }
-tab2 { padding-left: 4.15em; }
+tab1 { padding-left: 2em; }
+tab2 { padding-left: 2em; }
 
 
 body {
@@ -7,15 +7,23 @@ body {
   background-color: #000000;
 }
 
+a{
+  text-decoration: none;
+  grid-column: span 12;
+}
 
+p{
+  margin: 0;
+  padding: 0;
+}
 
 .grigliaHeader {
   margin: 0;
   max-width: 100vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-column-gap: 3em;
-  grid-row-gap: 3em;
+  grid-column-gap: 1em;
+  grid-row-gap: 1em;
   /*border: 1px solid red;*/
 }
 
@@ -24,8 +32,8 @@ body {
   max-width: 100vw;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-column-gap: 3em;
-  grid-row-gap: 3em;
+  grid-column-gap: 1em;
+  grid-row-gap: 1em;
   margin-bottom: 1em;
 
 }
@@ -36,16 +44,11 @@ body {
   color:#d9d9d9;
 }
 
-a{
-  text-decoration: none;
-  grid-column: span 12;
-}
+
 
 .morse{
   font-family: 'Morse Code';
   font-size: 3vw;
-  opacity: 100;
-  transition: none;
 }
 
 
@@ -65,15 +68,14 @@ a{
   text-decoration: none;
 }
 
-.nascosto{
-  opacity: 0;
-}
-
 .header:hover .nascosto{
-  transition: opacity 0.3s;
+  transition: opacity 0.5s;
   opacity: 100;
 }
 
+.nascosto{
+  opacity: 0;
+}
 
 
 /*spazi vuoti*/
@@ -91,7 +93,7 @@ a{
 
 .vuoto12{
   grid-column: span 12;
-  margin-bottom: 120px;
+  margin-bottom: 3em;
 }
 
 /*fotografie*/
@@ -115,9 +117,7 @@ a{
   margin-top: 0.4em;
 }
 
-.nascosto{
-  display: none;
-}
+
 
 .didascalia{
   color: #d9d9d9;
@@ -140,13 +140,36 @@ a{
   .grigliaHeader{
     max-width: initial;
     display: block;
+    grid-column: span 6;
 
   }
   .griglia1{
     max-width: initial;
-    display: block;
-    grid-row-gap: 0.5em;
+    display: relative;
   }
+
+  .foto1{
+    grid-column: span 10;
+    height: 150%;
+  }
+
+  .nascosto{
+    opacity: 100;
+  }
+
+  .header {
+    grid-column: span 6;
+    /*border: 1px solid rgb(0, 153, 255);*/
+    font-size: 3vw;
+    column-count: span 2;
+    column-gap: 0em;
+  }
+
+  .testo{
+    grid-column: span 11;
+    margin-left: 5em;
+  }
+
 
 }
 
