--- a/Telegrafo.css
+++ b/Telegrafo.css
@@ -145,9 +145,9 @@ p{
   }
   .griglia1{
     max-width: initial;
-    display: relative;
+    display: block;
   }
-
+/*
   .foto1{
     grid-column: span 10;
     height: 150%;
@@ -159,7 +159,7 @@ p{
 
   .header {
     grid-column: span 6;
-    /*border: 1px solid rgb(0, 153, 255);*/
+    /*border: 1px solid rgb(0, 153, 255);
     font-size: 3vw;
     column-count: span 2;
     column-gap: 0em;
@@ -169,7 +169,7 @@ p{
     grid-column: span 11;
     margin-left: 5em;
   }
-
+*/
 
 }
 
