--- a/Telegrafo.css
+++ b/Telegrafo.css
@@ -134,20 +134,20 @@ p{
 }
 
 
-
-@media (max-width:600px){
+@media (max-width:767px){
 
   .grigliaHeader{
     max-width: initial;
-    display: block;
+    display: relative;
     grid-column: span 6;
 
   }
   .griglia1{
     max-width: initial;
-    display: block;
+    display: relative;
+    grid-column: span 6;
   }
-/*
+
   .foto1{
     grid-column: span 10;
     height: 150%;
@@ -159,7 +159,7 @@ p{
 
   .header {
     grid-column: span 6;
-    /*border: 1px solid rgb(0, 153, 255);
+    /*border: 1px solid rgb(0, 153, 255);*/
     font-size: 3vw;
     column-count: span 2;
     column-gap: 0em;
@@ -169,7 +169,7 @@ p{
     grid-column: span 11;
     margin-left: 5em;
   }
-*/
+
 
 }
 
