--- a/Telegrafo.css
+++ b/Telegrafo.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500&display=swap');
+
 tab1 { padding-left: 2em; }
 tab2 { padding-left: 2em; }
 
@@ -45,20 +47,23 @@ p{
 }
 
 .cella {
-  font-family: Telegraf Regular;
+ 
+  font-family: 'Space Grotesk', 'sans-serif';
+  font-style: normal;
+  font-weight: 300;
   color:#d9d9d9;
 }
 
 .morse{
   font-family: 'Morse Code';
-  font-size: 3vw;
+  font-size: 3.25vw;
 }
 
 /*titolo*/
 .header {
   grid-column: span 12;
   /*border: 1px solid rgb(0, 153, 255);*/
-  font-size: 2vw;
+  font-size: 2.25vw;
   column-count: 2;
   column-gap: 0em;
   line-height: 1.1em;
@@ -68,6 +73,8 @@ p{
   padding-bottom: 0em;
   color: #d9d9d9;
   text-decoration: none;
+  font-family: 'Space Grotesk', 'sans-serif';
+  font-weight: 500;
 }
 
 .nascosto{
@@ -97,51 +104,6 @@ p{
   grid-column: span 4;
 }
 
-.testo{
-  grid-column: span 5;
-  font-size: 1.5vw;
-  line-height: 1.3;
-
-}
-
-.sottotitolo{
-  color: #d9d9d9;
-  font-size: 2vw;
-  margin-left: 1em;
-  font-family: Telegraf Regular;
-  line-height: 1.25em;
-  margin-top: 0.4em;
-}
-
-.didascalia{
-  color: #d9d9d9;
-  font-size: 1vw;
-  font-family: Telegraf Regular;
-  line-height: 1.25em;
-  padding-top: 1em;
-
-}
-
-.didascalia2{
-  grid-column: span 2;
-  font-size: 1vw;
-  font-family: Telegraf Regular;
-  line-height: 1.25em;
-}
-
-
-.dateTimeline{
-  grid-column: span 2;
-  font-size: 2vw;
-}
-
-.didascaliaTimeline{
-  grid-column: span 2;
-  font-size: 1vw;
-  font-family: Telegraf Regular;
-  line-height: 1.25em;
-}
-
 .adattaImmagine{
   width: 100%;
   height: 60%;
@@ -160,6 +122,58 @@ p{
   object-fit: cover;
   
 }
+
+/*testi*/
+.testo{
+  grid-column: span 5;
+  font-size: 1.5vw;
+  line-height: 1.3;
+}
+
+.sottotitolo{
+  color: #d9d9d9;
+  font-size: 2.25vw;
+  font-family: 'Space Grotesk', 'sans-serif';
+  font-weight: 500;
+  line-height: 1.25em;
+  margin-top: 0.4em;
+  grid-column: span 10;
+}
+
+.didascalia{
+  color: #d9d9d9;
+  font-size: 1vw;
+  font-family: 'Space Grotesk', 'sans-serif';
+  font-weight: 300;
+  line-height: 1.25em;
+  padding-top: 1em;
+
+}
+
+.didascalia2{
+  grid-column: span 2;
+  font-size: 1vw;
+  font-family: 'Space Grotesk', 'sans-serif';
+  font-weight: 300;
+  line-height: 1.25em;
+}
+
+
+.dateTimeline{
+  grid-column: span 2;
+  font-size: 1.75vw;
+}
+
+.didascaliaTimeline{
+  grid-column: span 2;
+  font-size: 1vw;
+  font-family: 'Space Grotesk', 'sans-serif';
+  font-weight: 300;
+  margin-top: -0.25em;
+  line-height: 1.25em;
+}
+
+
 
 
 @media (max-width:600px){
