--- a/Telegrafo.css
+++ b/Telegrafo.css
@@ -19,10 +19,25 @@ p{
   padding: 0;
 }
 
-
+/*interazioni*/
 .header:hover .nascosto{
   transition: opacity 0.5s;
   opacity: 100;
+}
+
+.sottotitolo:hover{
+  font-family: 'Morse Code';
+}
+
+.sticky {
+	position: -webkit-sticky;
+	position: sticky;
+	top: 0;
+  text-align: right;
+  padding: 3em;
+  padding-top: 15em;
+  padding-bottom: 0em;
+  column-count: span 1;
 }
 
 .grigliaHeader {
@@ -104,6 +119,10 @@ p{
   grid-column: span 4;
 }
 
+.foto2{
+  grid-column: span 10;
+}
+
 .adattaImmagine{
   width: 100%;
   height: 60%;
@@ -113,6 +132,12 @@ p{
 .adattaImmagine1{
   width: 100%;
   height: 40%;
+  object-fit: cover;
+}
+
+.adattaImmagine2{
+  width: 100%;
+  height: 30%;
   object-fit: cover;
 }
 
