--- a/Telegrafo.css
+++ b/Telegrafo.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500&display=swap');
 
-tab1 { padding-left: 2em; }
-tab2 { padding-left: 2em; }
+tab { padding-left: 2em; }
+
 
 
 body {
@@ -29,16 +29,27 @@ p{
   font-family: 'Morse Code';
 }
 
+
 .sticky {
 	position: -webkit-sticky;
 	position: sticky;
 	top: 0;
   text-align: right;
-  padding: 3em;
+  padding: 1em;
   padding-bottom: 0em;
+  padding-top: 1em;
   column-count: span 1;
 }
 
+
+/*responsive immagine*/
+.responsive{
+  width: 100%;
+  max-width: 2vw;
+  height: auto;
+}
+
+/*griglie*/
 .grigliaHeader {
   margin: 0;
   max-width: 100vw;
@@ -57,11 +68,9 @@ p{
   grid-column-gap: 1em;
   grid-row-gap: 1em;
   margin-bottom: 1em;
-
 }
 
 .cella {
- 
   font-family: 'Space Grotesk', 'sans-serif';
   font-style: normal;
   font-weight: 300;
@@ -122,6 +131,10 @@ p{
   grid-column: span 10;
 }
 
+.foto3{
+  grid-column: span 5;
+}
+
 .adattaImmagine{
   width: 100%;
   height: 60%;
@@ -136,7 +149,12 @@ p{
 
 .adattaImmagine2{
   width: 100%;
-  height: 30%;
+  height: 25%;
+  object-fit: cover;
+}
+
+.adattaImmagine3{
+  width: 100%;
   object-fit: cover;
 }
 
@@ -182,6 +200,13 @@ p{
   line-height: 1.25em;
 }
 
+.didascalia3{
+  grid-column: span 5;
+  font-size: 1vw;
+  font-family: 'Space Grotesk', 'sans-serif';
+  font-weight: 300;
+  line-height: 1.25em;
+}
 
 .dateTimeline{
   grid-column: span 2;
